# ChatServerClient

./: .gitignore  CMakeLists.txt  README.md
1/: chatclient.cpp  chatclient.h  group.h  main.cpp
Client/: CMakeLists.txt  Client.vcxproj  chatclient.cpp  chatclient.h  main.cpp  public.h  user.h
Client/include/: chatclient.h  public.h  user.h
Client/src/: chatclient.cpp  main.cpp
Server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatService.cpp  ChatService.h  database.cpp  database.h  friendmodel.cpp  friendmodel.h  groupmodel.cpp  groupmodel.h  groupuser.h  main.cpp  offlinemessagemodel.cpp  offlinemessagemodel.h  public.h  redis.cpp  redis.h  usermodel.cpp  usermodel.h  集群聊天服务器.sln  集群聊天服务器.vcxproj
Server/include/: ChatServer.h  ChatService.h  database.h  friendmodel.h  group.h  groupuser.h  offlinemessagemodel.h  redis.h  usermodel.h
Server/src/: ChatServer.cpp  ChatService.cpp  database.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  offlinemessagemodel.cpp  redis.cpp  usermodel.cpp
include/: public.h
